--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="modal1" class="modal">
             <button id="miBoton" class="waves-effect waves-light btn-small" onclick="solicitarContrasena()"><i
                     class="material-icons left">cloud</i>Reportes</button>
-            <div class="row" id="report1" hidden >
+            <div class="row" id="report1" hidden>
                 <div class="col s12 m6">
                     <div class="card  grey darken-3">
                         <div class="card-action p">
@@ -117,8 +117,7 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i
                                 class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text"
-                                href="https://drive.google.com/file/d/1KDdkAxnl0REOWhxdWAhmDJVaiOXH5KJJ/view?usp=sharing">
+                        <li><a class="flow-text" class="flow-text" src="promocion mensual/abril2023.pdf">
                                 Promociones Mensuales</a></li>
                     </div>
                 </div>
@@ -135,12 +134,15 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Producto Nuevo<i
                                 class="material-icons right ">close</i></span>
-                                <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1Uc3OO4hfd97WsGNUjD3h8zL9cJwDV_hc/view?usp=sharing">Cajas de Pino</a></li><br>
-                                <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1N-DXlUMmDZSJCwLxp4CVvEEiX96qGX_C/view?usp=sharing">Botas de PVC</a></li><br>
-                                    <li><a class="flow-text"
-                                        href="https://drive.google.com/file/d/1I1lQYP2NBRs3N6tj93S7CcUPnJxjLR4X/view?usp=sharing">Mecha/Plastico negro</a></li><br>
+                        <li><a class="flow-text"
+                                href="https://drive.google.com/file/d/1Uc3OO4hfd97WsGNUjD3h8zL9cJwDV_hc/view?usp=sharing">Cajas
+                                de Pino</a></li><br>
+                        <li><a class="flow-text"
+                                href="https://drive.google.com/file/d/1N-DXlUMmDZSJCwLxp4CVvEEiX96qGX_C/view?usp=sharing">Botas
+                                de PVC</a></li><br>
+                        <li><a class="flow-text"
+                                href="https://drive.google.com/file/d/1I1lQYP2NBRs3N6tj93S7CcUPnJxjLR4X/view?usp=sharing">Mecha/Plastico
+                                negro</a></li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1zuy-aIF3sYG_tjVh8gHvpjJ02prS63re/view?usp=sharing">Cintas
                                 Knight</a></li><br>
@@ -428,9 +430,9 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Coflex<i
                                 class="material-icons right ">close</i></span>
-                                <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/12Wec7JyLs54OUGBTHTvdJHHawGD4EUM0/view?usp=sharing">
-                                    Productos nuevos Coflex</a></li><br>
+                        <li><a class="flow-text"
+                                href="https://drive.google.com/file/d/12Wec7JyLs54OUGBTHTvdJHHawGD4EUM0/view?usp=sharing">
+                                Productos nuevos Coflex</a></li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/19aDfSzyKmzw1rpolMUaIV89RHyYHR77m/view?usp=sharing ">
                                 Catálogo Coflex</a></li><br>
@@ -1199,13 +1201,13 @@
 
 
     <footer class=" blue-grey lighten-5 ">
-            <p > 2023 © STA Juan C. Mena </p>
+        <p> 2023 © STA Juan C. Mena </p>
     </footer>
 
 
     <!--JavaScript at end of body for optimized loading-->
     <!-- Importar la biblioteca jQuery -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js "></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
