--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="col s12 offset-m0 l6 ">
                 <div class="card borde small z-depth-5 hoverable">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="250px " height="200px " src="img_catalogo/marzo.png">
+                        <img class="activator " width="250px " height="200px " src="img_catalogo/promo.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4 ">Promociones<i
