--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i
                                 class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text" src="promocion mensual/abril2023.pdf">
+                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/18t9OkoOe3GgnpKouGyyRD-DIuT4OzutG/view?usp=sharing">
                                 Promociones Mensuales</a></li>
                     </div>
                 </div>
