--- a/index.html
+++ b/index.html
@@ -159,6 +159,25 @@
             <div class="col s12 m6  l4 xl3 ">
                 <div class="card borde small z-depth-5 hoverable">
                     <div class="card-image waves-effect waves-block waves-light ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/rainbow.jpg ">
+                    </div>
+                    <div class="card-content ">
+                        <span class="card-title activator grey-text text-darken-4 ">Rainbow<i
+                                class="material-icons right ">more_vert</i></span>
+                        <p><a>Pintura spray.</a></p>
+                    </div>
+                    <div class="card-reveal ">
+                        <span class="card-title grey-text text-darken-4 ">Rainbow<i
+                                class="material-icons right ">close</i></span>
+                        <li><a class="flow-text"
+                                href="https://drive.google.com/file/d/1nQCs0E94jx4TrdMepUEQ5T_wf-1tgQu2/view?usp=sharing">
+                                Catálogo General</a></li><br>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6  l4 xl3 ">
+                <div class="card borde small z-depth-5 hoverable">
+                    <div class="card-image waves-effect waves-block waves-light ">
                         <img class="activator " width="150px " height="150px " src="img_catalogo/bambary.png ">
                     </div>
                     <div class="card-content ">
@@ -167,7 +186,7 @@
                         <p><a>Manualidades, Escolar, Adhesivos, Decorativos.</a></p>
                     </div>
                     <div class="card-reveal ">
-                        <span class="card-title grey-text text-darken-4 ">Mibro<i
+                        <span class="card-title grey-text text-darken-4 ">Bambary<i
                                 class="material-icons right ">close</i></span>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1M9dS3jb0hxyOXio54IwO5AjMG-_RMiMW/view?usp=sharing">
