--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                     <div class="card  light-blue darken-1">
                         <div class="card-action ">
                             <a
-                                href="https://drive.google.com/file/d/1POTsBmf7VMKQM6QaOtb63tn-2ckizeBj/view?usp=sharing">Cuentas
-                                Bancos</a>
+                                href="https://drive.google.com/file/d/1Oad7BrJZytQ9oKmji_I15w99W_GG0wup/view?usp=sharing">Métodos de Pago</a>
                         </div>
                     </div>
                 </div>
@@ -108,7 +107,7 @@
             <div class="col s12 offset-m0 l6 ">
                 <div class="card borde small z-depth-5 hoverable">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="250px " height="200px " src="img_catalogo/promo.png">
+                        <img class="activator " width="250px " height="200px " src="img_catalogo/mayo2023.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4 ">Promociones<i
@@ -117,7 +116,7 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i
                                 class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/18t9OkoOe3GgnpKouGyyRD-DIuT4OzutG/view?usp=sharing">Promociones Mensuales</a></li>
+                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/18XYqS1pRc1lEbvoSqzciyT-0FVqJR1rd/view?usp=sharing">Promociones Mensuales</a></li>
                     </div>
                 </div>
             </div>
