--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="col s12 offset-m0 l6 ">
                 <div class="card borde small z-depth-5 hoverable">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="250px " height="200px " src="img_catalogo/mayo2023.png">
+                        <img class="activator " width="250px " height="200px " src="img_catalogo/promociones.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4 ">Promociones<i
@@ -116,7 +116,7 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i
                                 class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/18XYqS1pRc1lEbvoSqzciyT-0FVqJR1rd/view?usp=sharing">Promociones Mensuales</a></li>
+                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1lrHLMJgG6mcMKorFOquU3iAvFV7t_YgQ/view?usp=sharing">Promociones Mensuales</a></li>
                     </div>
                 </div>
             </div>
