--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <header>
+
     <div class="navbar-fixed">
         <nav>
             <div class=" nav-wrapper light-blue darken-4">
@@ -58,8 +59,10 @@
                 <div class="col s12 m6">
                     <div class="card  light-blue darken-1">
                         <div class="card-action ">
-                            <a
-                                href="https://drive.google.com/file/d/1Oad7BrJZytQ9oKmji_I15w99W_GG0wup/view?usp=sharing">Métodos de Pago</a>
+                            <a  class="card-image waves-effect waves-block waves-light ">
+                                <img class="activator " width="200px " height="200px " src="img_catalogo/sinpe.jpg">
+                            </a> <br>
+                            <a href="https://drive.google.com/file/d/1Oad7BrJZytQ9oKmji_I15w99W_GG0wup/view?usp=sharing">Métodos de Pago</a>
                         </div>
                     </div>
                 </div>
@@ -1224,6 +1227,7 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <!-- Importar la biblioteca jQuery -->
+    
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js "></script>
     <script type="text/javascript" src="js/index.js"></script>
