--- a/index.html
+++ b/index.html
@@ -60,8 +60,16 @@
                     <div class="card  light-blue darken-1">
                         <div class="card-action ">
                             <a  class="card-image waves-effect waves-block waves-light ">
-                                <img class="activator " width="200px " height="200px " src="img_catalogo/sinpe.jpg">
-                            </a> <br>
+                                <img class="activator " width="200px " height="200px " src="img_catalogo/sinpe.jpg"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card  light-blue darken-1">
+                        <div class="card-action ">
+                            <a  class="card-image waves-effect waves-block waves-light ">
                             <a href="https://drive.google.com/file/d/1Oad7BrJZytQ9oKmji_I15w99W_GG0wup/view?usp=sharing">Métodos de Pago</a>
                         </div>
                     </div>
