--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="row">
                 <div class="col s12 m6">
-                    <div class="card  light-blue darken-1">
+                    <div class="card  light-green darken-1">
                         <div class="card-action ">
                             <a  class="card-image waves-effect waves-block waves-light ">
                                 <img class="activator " width="200px " height="200px " src="img_catalogo/sinpe.jpg"></a>
@@ -127,7 +127,7 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i
                                 class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1lrHLMJgG6mcMKorFOquU3iAvFV7t_YgQ/view?usp=sharing">Promociones Mensuales</a></li>
+                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1TEs6FD3xnhBMhPzXSlLma6uuWCkcXFkp/view?usp=sharing">Promoción Mensual</a></li>
                     </div>
                 </div>
             </div>
