--- a/index.html
+++ b/index.html
@@ -113,14 +113,12 @@
 </header>
 
 <body>
-    <input type="text" id="searchInput" placeholder="Buscar...">
-  
- 
+    <input type="search"  id="searchInput" placeholder="  Buscar...">
 <ul id="fileList">
    <div class="container ">
         <div class="row">
           
-            <div class="col s12 offset-m0 l6 " promociones >
+            <div class="col s12 offset-m0 l6 ">
                 <div class="card borde small z-depth-5 hoverable">
                     <div class="card-image waves-effect waves-block waves-light ">
                         <img class="activator " width="250px " height="200px " src="img_catalogo/promociones.png">
@@ -243,7 +241,7 @@
                         <p><a>Duchas, Calentadores, Resistencias.</a></p>
                     </div>
                     <div class="card-reveal ">
-                        <span class="card-title grey-text text-darken-4 ">Lorenzetti<i
+                        <span class="card-title grey-text text-darken-4 "><i
                                 class="material-icons right ">close</i></span>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1CZ4If8HMIJfDv8H9IM7eaASVGDLEGn3k/view?usp=sharing">Catálogo
@@ -289,7 +287,7 @@
                         <p><a>Adhesivos, Cintas, Conectores, Lijas.</a></p>
                     </div>
                     <div class="card-reveal ">
-                        <span class="card-title grey-text text-darken-4 ">3M<i
+                        <span class="card-title grey-text text-darken-4 "><i
                                 class="material-icons right ">close</i></span>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1mT_qizcMXhWY_5hex3oeAcHcC78BrriH/view?usp=sharing">Productos
