--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Producto Nuevo<i
                                 class="material-icons right ">close</i></span>
+                                <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1Gzg0M8j49EiD1fmP7AoGCr8Hw3cI2oTB/view?usp=sharing">Abanicos Premier</a></li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1Uc3OO4hfd97WsGNUjD3h8zL9cJwDV_hc/view?usp=sharing">Cajas
                                 de Pino</a></li><br>
