--- a/index.html
+++ b/index.html
@@ -188,6 +188,25 @@
             <div class="col s12 m6  l4 xl3 ">
                 <div class="card borde small z-depth-5 hoverable">
                     <div class="card-image waves-effect waves-block waves-light ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/MIBR.png ">
+                    </div>
+                    <div class="card-content ">
+                        <span class="card-title activator grey-text text-darken-4 ">Perf-ex<i
+                                class="material-icons right ">more_vert</i></span>
+                        <p><a>láminas metálicas.</a></p>
+                    </div>
+                    <div class="card-reveal ">
+                        <span class="card-title grey-text text-darken-4 "><i
+                                class="material-icons right ">close</i></span>
+                        <li><a class="flow-text"
+                                href="https://drive.google.com/file/d/1kVtxxdxZ4xIdUl4-dXW_x7feez_0Ootj/view?usp=sharing">
+                                Catálogo Láminas</a></li>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6  l4 xl3 ">
+                <div class="card borde small z-depth-5 hoverable">
+                    <div class="card-image waves-effect waves-block waves-light ">
                         <img class="activator " width="150px " height="150px " src="img_catalogo/rainbow.jpg ">
                     </div>
                     <div class="card-content ">
@@ -392,7 +411,7 @@
                         <span class="card-title grey-text text-darken-4 "><i
                                 class="material-icons right ">close</i></span>
                         <li><a class="flow-text"
-                                href="https://drive.google.com/file/d/1-fEpi7sU490ojjEULYvZpQN4pQyz-5RG/view?usp=sharing ">
+                                href="https://drive.google.com/file/d/1Dplq2ieohswCGT-eKKvEmd5YuCtJJvPf/view?usp=sharing">
                                 Catálogo Supresores y Regletas</a></li>
                     </div>
                 </div>
@@ -593,7 +612,10 @@
                                 class="material-icons right ">close</i></span>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1AjKYWn0LNLm9_Rp2yv6tTGGX4pYYsuE3/view?usp=sharing ">
-                                Catálogo Ferretero Completo</a></li>
+                                Catálogo Ferretero Completo</a></li><br>
+                                <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/19snGz0oUcO38Y1ju2CRkd7xQF3L4Esy2/view?usp=sharing">
+                                    Fichas Fregaderos</a></li>
                     </div>
                 </div>
             </div>
@@ -770,7 +792,7 @@
                         <img class="activator " width="150px " height="150px " src="img_catalogo/stanley.png ">
                     </div>
                     <div class="card-content ">
-                        <span class="card-title activator grey-text text-darken-4 ">stanley<i
+                        <span class="card-title activator grey-text text-darken-4 ">Stanley<i
                                 class="material-icons right ">more_vert</i></span>
                         <p><a>Herramienta Manual.</a><br><br></p>
                     </div>
