--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="col s12 m6  l4 xl3 ">
                 <div class="card borde small z-depth-5 hoverable">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="150px " height="150px " src="img_catalogo/MIBR.png ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/perfex.png ">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Perf-ex<i
