--- a/index.html
+++ b/index.html
@@ -277,9 +277,12 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 "><i
                                 class="material-icons right ">close</i></span>
+                                <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1x2dz7bLpEJtE423kBGDY2KMhUQqzg886/view?usp=sharing">Fichas Técnicas
+                                    </a></li><br>
                         <li><a class="flow-text"
-                                href="https://drive.google.com/file/d/1CZ4If8HMIJfDv8H9IM7eaASVGDLEGn3k/view?usp=sharing">Catálogo
-                                y Fichas Técnicas</a></li><br>
+                                href="https://drive.google.com/file/d/1CZ4If8HMIJfDv8H9IM7eaASVGDLEGn3k/view?usp=sharing">Catálogo Duchas
+                                </a></li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1BTrTPzp0dug1UWd3m5xzpFOVFoIWa-Kn/view?usp=sharing">Catálogo
                                 Duchas</a></li><br>
