--- a/index.html
+++ b/index.html
@@ -113,20 +113,11 @@
 </header>
 
 <body>
-    <div class="input-wrapper">   <input type="search" class="input"  id="searchInput" placeholder="Buscar" >
-        <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="input-icon"
-        viewBox="0 0 20 20"
-        fill="currentColor"
-     >
-        <path
-           fill-rule="evenodd"
-           d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-           clip-rule="evenodd"
-        />
-     </svg>
-    </div>
+    <div class="input-field hoverable">
+        <input id="search" type="text" class="validate">
+        <label for="search">Buscar</label>
+      </div>
+  
 <ul id="fileList">
    <div class="container ">
         <div class="row">
@@ -143,7 +134,8 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i
                                 class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1uwqQ8JkrxCpPZY23jJUu1dn4ySJ9_jKe/view?usp=sharing">Promoción Mensual</a></li>
+                        <li><a class="flow-text" href="hhttps://drive.google.com/file/d/1_mTzmzOnMvSn1YexE-tDR2lnb3Ki2LZY/view?usp=sharing"><i class="material-icons left">cloud_done</i>Promoción de Cierre</a></li><br>
+                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1uwqQ8JkrxCpPZY23jJUu1dn4ySJ9_jKe/view?usp=sharing"><i class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
                     </div>
                 </div>
             </div>
