--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i
                                 class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" href="hhttps://drive.google.com/file/d/1_mTzmzOnMvSn1YexE-tDR2lnb3Ki2LZY/view?usp=sharing"><i class="material-icons left">cloud_done</i>Promoción de Cierre</a></li><br>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1_mTzmzOnMvSn1YexE-tDR2lnb3Ki2LZY/view?usp=sharing"><i class="material-icons left">cloud_done</i>Promoción de Cierre</a></li><br>
                         <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1uwqQ8JkrxCpPZY23jJUu1dn4ySJ9_jKe/view?usp=sharing"><i class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
                     </div>
                 </div>
