--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <li><button id="miBoton" class="waves-effect waves-light btn-large" onclick="solicitarContrasena()"><i
                         class="material-icons small left">cloud</i>Reportes</button>
                 <div class="row" id="report1" hidden>
-                    <div class="col s12 m6">
+                    <div class="s12 m12 l12">
                         <div class="card  grey darken-3">
                             <div class="card-action p">
                                 <a href="https://reportesbi.mayoreo.biz/login">Reportes OIC</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m6">
+                    <div class="col s12 m12 l12">
                         <div class="card grey darken-3">
                             <div class="card-action ">
                                 <a href="http://consulta.cofersa.cr/">CONSULTA PEDIDOS</a>
@@ -49,62 +49,41 @@
                 </div>
             </li>
             <div class="divider"></div>
-            <li> <img class="activator " width="250px " height="200px " src="img_catalogo/sinpe.jpg"></li>
+            <li> <img class="activator " width="95% " height="250px " src="img_catalogo/sinpe.jpg"></li>
 
             <li>
                 <div class="divider"></div>
             </li>
             <li>
-                <div class="row">
-                    <div class="col s12 m6">
-                        <div class="card  light-blue darken-1">
-                            <div class="card-action ">
-                                <a class="card-image waves-effect waves-block waves-light ">
-                                    <a
-                                        href="https://drive.google.com/file/d/1Oad7BrJZytQ9oKmji_I15w99W_GG0wup/view?usp=sharing">Métodos
-                                        de Pago</a>
-                            </div>
-                        </div>
+                <div class="col s12 m12 l12 ">
+                    <div class="card  light-blue darken-1">
+                        <a class=" waves-effect waves-block waves-light ">
+                            <a
+                                href="https://drive.google.com/file/d/1Oad7BrJZytQ9oKmji_I15w99W_GG0wup/view?usp=sharing">Métodos
+                                de Pago</a>
                     </div>
                 </div>
                 <div class="divider"></div>
-                <div class="modal-content">
-                    <h5> Material Redes Sociales</h5>
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <div class="card  light-blue darken-4">
-                                <div class="card-content white-text">
-                                    <span class="card-title">
-                                        <h6>Bosch-Skil-Dremel.</h6>
-                                    </span>
-                                </div>
-                                <div class="card-action">
-                                    <a href="https://www.boschimages.com">BOSCH.COM</a>
-                                </div>
-                            </div>
-                        </div>
+                <h5> Material Redes Sociales</h5>
+                <div class="col s12 m12 l12 ">
+                    <div class="card  light-blue darken-4">
+                        <a class=" waves-effect waves-block waves-light  ">
+                            <a href="https://www.boschimages.com">BOSCH.COM</a>
                     </div>
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <div class="card  red darken-3">
-                                <div class="card-content white-text">
-                                    <span class="card-title">
-                                        <h6>Lorenzetti.</h6>
-                                    </span>
-                                </div>
-                                <div class="card-action">
-                                    <a
-                                        href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing">LORENZETTI</a>
-                                </div>
-                            </div>
-                        </div>
+                </div>
+                <div class="col s12 m12 l12 ">
+                    <div class="card  red darken-3">
+                        <a class=" waves-effect waves-block waves-light ">
+                            <a
+                                href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing">LORENZETTI</a>
                     </div>
                 </div>
                 </div>
             </li>
-            <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
         </ul>
-        <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large waves-effect waves-light btn-small  red darken-1"><i class="material-icons">menu</i></a>
+        <a  href="#" data-target="slide-out"
+            class="sidenav-trigger show-on-large waves-effect waves-light btn-small  red darken-1 "><i
+                class="material-icons" >menu</i></a>
 
     </nav>
 
