--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="row" id="report1" hidden>
                     <div class="s12 m12 l12">
                         <div class="card  grey darken-3">
-                            <div class="card-action p">
+                            <div class="card-action ">
                                 <a href="https://reportesbi.mayoreo.biz/login">Reportes OIC</a>
                             </div>
                         </div>
