--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </header>
 
 <body>
-    <div class="input-field hoverable">
+    <div class="input-field buscador">
         <input id="search" type="text" class="validate">
         <label for="search">Buscar</label>
     </div>
