--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
@@ -81,22 +83,22 @@
                 </div>
             </li>
         </ul>
-        <a  href="#" data-target="slide-out"
+        <a href="#" data-target="slide-out"
             class="sidenav-trigger show-on-large waves-effect waves-light btn-small  red darken-1 "><i
-                class="material-icons" >menu</i></a>
+                class="material-icons">menu</i></a>
 
     </nav>
-
 
 
 </header>
 
 <body>
-    <div class="input-field buscador">
-        <input id="search" type="text" class="validate">
-        <label for="search">Buscar</label>
-    </div>
-
+    <div class="contenedor">
+		<input id="search" type="text" placeholder="__Buscar">
+		<div class="btn red darken-1">
+			<i class="fa fa-search "></i>
+		</div>
+	</div>
     <ul id="fileList">
         <div class="container ">
             <div class="row">
