--- a/index.html
+++ b/index.html
@@ -1219,10 +1219,16 @@
 -->
 
 
-    <footer class=" blue-grey lighten-5 ">
-        <p> 2023 © STA Juan C. Mena </p>
-    </footer>
-
+<footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="grey-text text-darken-4 ">© 2023 Juan C. Mena Leiva</h5>
+        </div>
+      </div>
+    </div>
+  
+  </footer>
 
     <!--JavaScript at end of body for optimized loading-->
     <!-- Importar la biblioteca jQuery -->
