--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 
 <body>
     <div class="contenedor">
-		<input id="search" type="text" placeholder="__Buscar">
-		<div class="btn red darken-1">
-			<i class="fa fa-search "></i>
-		</div>
-	</div>
+        <input id="search" type="text" placeholder="Buscar">
+        <div class="btn red darken-1">
+            <i class="fa fa-search "></i>
+        </div>
+    </div>
     <ul id="fileList">
         <div class="container ">
             <div class="row">
@@ -1204,31 +1204,19 @@
             </div>
         </div>
     </ul>
-    <!--
-    <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red">
-          <i class="large material-icons">mode_edit</i>
-        </a>
-        <ul>
-          <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-          <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-          <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-          <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-        </ul>
-    </div>
--->
 
 
-<footer class="page-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="grey-text text-darken-4 ">© 2023 Juan C. Mena Leiva</h5>
+
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h6 class="grey-text text-darken-3">© 2023 Juan C. Mena Leiva</h6>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  
-  </footer>
+
+    </footer>
 
     <!--JavaScript at end of body for optimized loading-->
     <!-- Importar la biblioteca jQuery -->
