--- a/index.html
+++ b/index.html
@@ -104,17 +104,15 @@
             <div class="row">
 
                 <div class="col s12 offset-m0 l6">
-                    <div class="card borde small z-depth-5 hoverable">
+                    <div class="card borde small  ">
                         <div class="card-image waves-effect waves-block waves-light ">
                             <img class="activator " width="250px " height="200px " src="img_catalogo/promociones.png">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4 ">Promociones<i
-                                    class="material-icons right ">more_vert</i></span>
+                            <span class="card-title  grey-text text-darken-4 ">Promociones</span>
                         </div>
                         <div class="card-reveal ">
-                            <span class="card-title grey-text text-darken-4 ">Promociones<i
-                                    class="material-icons right ">close</i></span>
+                            <span class="card-title grey-text text-darken-4 ">Promociones</span>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1_mTzmzOnMvSn1YexE-tDR2lnb3Ki2LZY/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción de Cierre</a></li><br>
