--- a/index.html
+++ b/index.html
@@ -124,6 +124,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="col s12 offset-m0 l6">
+                    <div class="card borde small z-depth-5 hoverable">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="250px " height="200px " src="">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4 ">Shopper Navideño<i
+                                    class="material-icons right ">more_vert</i></span>
+                        </div>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 ">Producto Navideño<i
+                                    class="material-icons right ">close</i></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1Ou5yTUvz9XWtGGPAo3vlYYMuz-Kltglf/view?usp=sharing"><i
+                                        class="material-icons left">cloud_done</i>Shopper Navideño</a></li><br>
+                    </div>
+                </div>
 
                 <div class="col s12 offset-m0 l6 ">
                     <div class="card borde small z-depth-5 hoverable ">
