--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="row">
 
                 <div class="col s12 offset-m0 l6">
-                    <div class="card borde small  ">
+                    <div class="card borde small z-depth-5 hoverable ">
                         <div class="card-image waves-effect waves-block waves-light ">
                             <img class="activator " width="250px " height="200px " src="img_catalogo/promociones.png"><i
                             class=" bb material-icons light-blue darken-1 small center  btn-small">search</i>
@@ -116,7 +116,7 @@
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1_mTzmzOnMvSn1YexE-tDR2lnb3Ki2LZY/view?usp=sharing"><i
-                                        class="material-icons left">cloud_done</i>Promoción de Cierre</a></li><br>
+                                        class="material-icons left" >cloud_done</i>Promoción de Cierre</a></li><br>
                             <li><a class="flow-text" class="flow-text"
                                     href="https://drive.google.com/file/d/18ceOJR0tceV5TmPYl4xyvvsWPbQmxPT6/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
