--- a/index.html
+++ b/index.html
@@ -93,15 +93,16 @@
 </header>
 
 <body>
-    <div class="contenedor">
+
+    <div class="contenedor" >
         <input id="search" type="text" placeholder="Buscar">
         <div class="btn red darken-1">
             <i class="fa fa-search "></i>
         </div>
     </div>
     <ul id="fileList">
-        <div class="container ">
-            <div class="row">
+        <div class="container " >
+            <div class="row"  >
 
                 <div class="col s12 offset-m0 l4">
                     <div class="card borde small  ">
@@ -123,16 +124,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 offset-m0 l4">
-                    <div class="card borde small z-depth-5 hoverable">
-                        <div class="card-image waves-effect waves-block waves-light ">
+                <div  class="col s12 offset-m0 l4" id="modo-nieve" >
+                    <div class="card borde small z-depth-5 hoverable" >
+                        <div class="card-image waves-effect waves-block waves-light " >
                             <img class="activator " width="250px " height="200px " src="img_catalogo/navidad.png"><i
                             class=" bb material-icons light-blue darken-1 small center  btn-small">search</i>
 
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4 ">Shopper Navideño<i
-                                    class="material-icons right ">more_vert</i></span>
+                            <span class="card-title activator grey-text text-darken-4 " >Shopper Navideño</span>
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Producto Navideño<i
