--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         </div>
                     </div>
                 </div>
-                <div  class="col s12 offset-m0 l4" id="modo-nieve" >
-                    <div class="card borde small z-depth-5 hoverable" >
+                <div  class="col s12 offset-m0 l4"  >
+                    <div class="card borde small z-depth-5 hoverable" id="modo-nieve">
                         <div class="card-image waves-effect waves-block waves-light " >
                             <img class="activator " width="250px " height="200px " src="img_catalogo/navidad.png"><i
                             class=" bb material-icons light-blue darken-1 small center  btn-small">search</i>
