--- a/index.html
+++ b/index.html
@@ -134,9 +134,8 @@
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4 " >Shopper Navideño</span>
                         </div>
-                        <div class="card-reveal ">
-                            <span class="card-title grey-text text-darken-4 ">Producto Navideño<i
-                                    class="material-icons right ">close</i></span>
+                        <div class="card-reveal " >
+                            <span class="card-title grey-text text-darken-4 ">Producto Navideño</span>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1Ou5yTUvz9XWtGGPAo3vlYYMuz-Kltglf/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Shopper Navideño</a></li><br>
