--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                         class="material-icons small left">cloud</i>Reportes</button>
                 <div class="row" id="report1" hidden>
                     <div class="s12 m12 l12">
-                        <div class="card  grey darken-3">
+                        <div class="card lateral grey darken-3">
                             <div class="card-action ">
                                 <a href="https://reportesbi.mayoreo.biz/login">Reportes OIC</a>
                             </div>
                         </div>
                     </div>
                     <div class="col s12 m12 l12">
-                        <div class="card grey darken-3">
+                        <div class="card lateral grey darken-3">
                             <div class="card-action ">
                                 <a href="http://consulta.cofersa.cr/">CONSULTA PEDIDOS</a>
                             </div>
@@ -58,7 +58,7 @@
             </li>
             <li>
                 <div class="col s12 m12 l12 ">
-                    <div class="card  light-blue darken-1">
+                    <div class="card lateral light-blue darken-1">
                         <a class=" waves-effect waves-block waves-light ">
                             <a
                                 href="https://drive.google.com/file/d/1Oad7BrJZytQ9oKmji_I15w99W_GG0wup/view?usp=sharing">Métodos
@@ -66,15 +66,15 @@
                     </div>
                 </div>
                 <div class="divider"></div>
-                <h5> Material Redes Sociales</h5>
+                <h5 class="  grey-text text-darken-4"> Material Redes Sociales</h5>
                 <div class="col s12 m12 l12 ">
-                    <div class="card  light-blue darken-1">
+                    <div class="card lateral blue darken-4">
                         <a class=" waves-effect waves-block waves-light  ">
                             <a href="https://www.boschimages.com">BOSCH.COM</a>
                     </div>
                 </div>
                 <div class="col s12 m12 l12 ">
-                    <div class="card  red darken-3">
+                    <div class="card lateral red darken-3">
                         <a class=" waves-effect waves-block waves-light ">
                             <a
                                 href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing">LORENZETTI</a>
