--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
-
+                            <li><a class="flow-text"
+                                href="https://drive.google.com/file/d/1AZ8cw5-o-ix2TN_jWGly-ZbNwPEg45ip/view?usp=sharing"><i
+                                    class="material-icons left">cloud_done</i>Promoción Semanal</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/18ceOJR0tceV5TmPYl4xyvvsWPbQmxPT6/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
