--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
                             <li><a class="flow-text"
-                                href="https://drive.google.com/file/d/1AZ8cw5-o-ix2TN_jWGly-ZbNwPEg45ip/view?usp=sharing"><i
-                                    class="material-icons left">cloud_done</i>Promoción Semanal</a></li><br>
+                                    href="https://drive.google.com/file/d/1AZ8cw5-o-ix2TN_jWGly-ZbNwPEg45ip/view?usp=sharing"><i
+                                        class="material-icons left">cloud_done</i>Promoción Semanal</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/18ceOJR0tceV5TmPYl4xyvvsWPbQmxPT6/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
@@ -948,8 +948,11 @@
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 "></span>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1Vhvp6YCLIQJRevmdlBOvcztllanNGY_b/view?usp=sharing">
-                                    Catálogo Completo</a></li>
+                                    href="https://drive.google.com/file/d/1ff77Mz1ov_hoFVb1qkhzpYRLXVYllKXa/view?usp=drive_link">
+                                    Catálogo Completo</a></li><br>
+                                    <li><a class="flow-text"
+                                            href="https://drive.google.com/file/d/1ad7JEzfXWLJtkn8s-Sv5CvJjVYwZ-T43/view?usp=drive_link">
+                                            Silla Plástica</a></li>
                         </div>
                     </div>
                 </div>
