--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <header>
-    <nav class="barra light-blue darken"> <a class="brand-logo center ">CATÁLOGO BAZAR Y HOGAR</a>
+    <nav class="barra light-blue darken-4"> <a class="brand-logo center ">COFERSA</a>
         <!-- modo oscuro -->
         <div class="switch">
             <label>
@@ -64,6 +64,21 @@
                     </div>
                 </div>
                 <div class="divider"></div>
+                <h5 class="  grey-text text-darken-4"> Material Redes Sociales</h5>
+                <div class="col s12 m12 l12 ">
+                    <div class="card lateral blue darken-4">
+                        <a class=" waves-effect waves-block waves-light  ">
+                            <a href="https://www.boschimages.com">BOSCH.COM</a>
+                    </div>
+                </div>
+                <div class="col s12 m12 l12 ">
+                    <div class="card lateral red darken-3">
+                        <a class=" waves-effect waves-block waves-light ">
+                            <a
+                                href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing">LORENZETTI</a>
+                    </div>
+                </div>
+                </div>
             </li>
         </ul>
         <a href="#" data-target="slide-out"
@@ -97,8 +112,8 @@
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
-                            <li><a class="flow-text "
-                                    href="https://drive.google.com/file/d/1A_f9C_r4nUKnCULVG4NH6hS4eH08Gvvz/view?usp=drive_link" hidden><i
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1A_f9C_r4nUKnCULVG4NH6hS4eH08Gvvz/view?usp=drive_link"><i
                                         class="material-icons left">cloud_done</i>Promoción Semanal</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/18ceOJR0tceV5TmPYl4xyvvsWPbQmxPT6/view?usp=sharing"><i
@@ -124,9 +139,60 @@
                     </div>
                 </div>
 
+                <div class="col s12 offset-m0 l4 ">
+                    <div class="card borde small z-depth-5 hoverable ">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="250px " height="200px "
+                                src="img_catalogo/producto nuevo.png ">
+                        </div>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Producto Nuevo</span>
+                        </div>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 ">Producto Nuevo</span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1Gzg0M8j49EiD1fmP7AoGCr8Hw3cI2oTB/view?usp=sharing">Abanicos
+                                    Premier</a></li><br>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1Uc3OO4hfd97WsGNUjD3h8zL9cJwDV_hc/view?usp=sharing">Cajas
+                                    de Pino</a></li><br>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1N-DXlUMmDZSJCwLxp4CVvEEiX96qGX_C/view?usp=sharing">Botas
+                                    de PVC</a></li><br>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1I1lQYP2NBRs3N6tj93S7CcUPnJxjLR4X/view?usp=sharing">Mecha/Plastico
+                                    negro</a></li><br>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1zuy-aIF3sYG_tjVh8gHvpjJ02prS63re/view?usp=sharing">Cintas
+                                    Knight</a></li><br>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1kxE1p9tTQ34oYJB0Te5uOk9h21LDe59p/view?usp=sharing">Encendedores</a>
+                            </li><br>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1jO6NSh_o8o1FKLE3elxuNFTu0ULdaraH/view?usp=sharing">Ratoneras</a>
+                            </li>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row ">
-                
+                <div class="col s12 m6  l4 xl3 ">
+                    <div class="card borde small z-depth-5 hoverable">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="150px " height="150px " src="img_catalogo/perfex.png ">
+                        </div>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Perf-ex</span>
+                            <p><a>láminas metálicas.</a></p>
+                        </div>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1kVtxxdxZ4xIdUl4-dXW_x7feez_0Ootj/view?usp=sharing">
+                                    Catálogo Láminas</a></li>
+                        </div>
+                    </div>
+                </div>
                 <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
