--- a/index.html
+++ b/index.html
@@ -179,6 +179,23 @@
                 <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="150px " height="150px " src="img_catalogo/guateplast.jpeg">
+                        </div>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Guateplast</span>
+                            <p><a>Productos plásticos y hogar.</a></p>
+                        </div>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1r1T7ArwwsKzYgverIdCXjR0aPpOx4qHg/view?usp=sharing">
+                                    Catálogo Guateplast</a></li>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m6  l4 xl3 ">
+                    <div class="card borde small z-depth-5 hoverable">
+                        <div class="card-image waves-effect waves-block waves-light ">
                             <img class="activator " width="150px " height="150px " src="img_catalogo/perfex.png ">
                         </div>
                         <div class="card-content ">
