--- a/index.html
+++ b/index.html
@@ -815,6 +815,23 @@
                 <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="150px " height="150px " src="img_catalogo/einhell.png">
+                        </div>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Einhell</span>
+                            <p><a>Herramienta eléctrica.</a></p>
+                        </div>
+                        <div class="card-reveal ">einhell
+                            <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1XiR-aq23FzvFa_GwB9Y61-fjVxljo4E0/view?usp=sharing">
+                                    Catálogo Einhell</a></li>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m6  l4 xl3 ">
+                    <div class="card borde small z-depth-5 hoverable">
+                        <div class="card-image waves-effect waves-block waves-light ">
                             <img class="activator " width="150px " height="150px " src="img_catalogo/campbell.png ">
                         </div>
                         <div class="card-content ">
@@ -922,17 +939,34 @@
                 <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
-                            <img class="activator " width="150px " height="150px " src="img_catalogo/voniko.jpg ">
+                            <img class="activator " width="150px " height="150px " src="img_catalogo/bekaert.png">
                         </div>
                         <div class="card-content ">
-                            <span class="card-title activator grey-text text-darken-4 ">Voniko</span>
-                            <p><a>Baterías.</a><br></p>
+                            <span class="card-title activator grey-text text-darken-4 ">Bekaert</span>
+                            <p><a>Alambre de púas.</a></p>
                         </div>
-                        <div class="card-reveal ">
+                        <div class="card-reveal ">Bekaert
                             <span class="card-title grey-text text-darken-4 "></span>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/14TkWP8rfzraTsHP-AzilNUiAGL55ay-b/view?usp=sharing">
-                                    Catálogo Baterías </a></li>
+                                    href="https://drive.google.com/file/d/1XiR-aq23FzvFa_GwB9Y61-fjVxljo4E0/view?usp=sharing">
+                                    Catálogo Bekaert</a></li>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m6  l4 xl3 ">
+                    <div class="card borde small z-depth-5 hoverable">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="150px " height="150px " src="img_catalogo/premier.png">
+                        </div>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Premier</span>
+                            <p><a>Abanicos.</a></p>
+                        </div>
+                        <div class="card-reveal ">Premier
+                            <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1Gzg0M8j49EiD1fmP7AoGCr8Hw3cI2oTB/view?usp=sharing">
+                                    Catálogo Abanicos</a></li>
                         </div>
                     </div>
                 </div>
