--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1A_f9C_r4nUKnCULVG4NH6hS4eH08Gvvz/view?usp=drive_link"><i
+                                    href="https://drive.google.com/file/d/1A_f9C_r4nUKnCULVG4NH6hS4eH08Gvvz/view?usp=drive_link" hidden><i
                                         class="material-icons left">cloud_done</i>Promoción Semanal</a></li><br>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/18ceOJR0tceV5TmPYl4xyvvsWPbQmxPT6/view?usp=sharing"><i
+                                    href="https://drive.google.com/file/d/1e5903msB0MH-wbuQNvgm1tKS8nRKl3DB/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
                         </div>
                     </div>
