--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </li>
         </ul>
         <a href="#" data-target="slide-out"
-            class=" menuh sidenav-trigger show-on-large waves-effect waves-light btn-small  red darken-1 "><i
+            class=" menuh sidenav-trigger show-on-large  "><i
                 class="material-icons">menu</i></a>
 
     </nav>
