--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <header>
     <!--barra titulo-->
-    <nav class="barra light-blue darken-4"> <a class="brand-logo center ">COFERSA</a>
+    <nav class="barra light-blue darken-4"> <img class="activator " src="img_catalogo/ti.png"></a>
         <!-- Switch modo oscuro en barra de titulo -->
         <div class="switch">
             <label>
@@ -32,7 +32,7 @@
         </div>
         <!--menu lateral -->
         <ul id="slide-out" class="sidenav">
-<!--menu oculto -->
+            <!--menu oculto -->
             <li><button id="miBoton" class="waves-effect waves-light btn-large" onclick="solicitarContrasena()"><i
                         class="material-icons small left">cloud</i>Reportes</button>
                 <div class="row" id="report1" hidden>
@@ -86,13 +86,9 @@
             </li>
         </ul>
         <!--Menu hamburguesa- llamada menu lateral-->
-        <a href="#" data-target="slide-out"
-            class=" menuh sidenav-trigger show-on-large  "><i
+        <a href="#" data-target="slide-out" class=" menuh sidenav-trigger show-on-large  "><i
                 class="material-icons">menu</i></a>
-
     </nav>
-
-
 </header>
 
 <body>
@@ -106,7 +102,7 @@
     </div>
     <!--id=filelist seccion de busqueda de input id=search-->
     <ul id="fileList">
-        
+
         <div class="container ">
             <!--row contiene los cards de la seccion promociones -->
             <div class="row">
@@ -122,8 +118,8 @@
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1A_f9C_r4nUKnCULVG4NH6hS4eH08Gvvz/view?usp=drive_link" hidden><i
-                                        class="material-icons left">cloud_done</i>Promoción Semanal</a></li><br>
+                                    href="https://drive.google.com/file/d/1A_f9C_r4nUKnCULVG4NH6hS4eH08Gvvz/view?usp=drive_link"
+                                    hidden><i class="material-icons left">cloud_done</i>Promoción Semanal</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1e5903msB0MH-wbuQNvgm1tKS8nRKl3DB/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
@@ -159,7 +155,7 @@
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Producto Nuevo</span>
-                          
+
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1Uc3OO4hfd97WsGNUjD3h8zL9cJwDV_hc/view?usp=sharing">Cajas
                                     de Pino</a></li><br>
@@ -1193,7 +1189,7 @@
     </ul>
 
 
-<!--pie de pagina-->
+    <!--pie de pagina-->
     <footer class="page-footer">
         <div class="container">
             <div class="row">
