--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <header>
     <!--barra titulo-->
-    <nav class="barra light-blue darken-4"> <img class="activator " src="img_catalogo/ti.png"></a>
+    <nav class="barra light-blue darken-4"> <img class="activator " width="150px " height="90%" src="img_catalogo/cofersa.png"></a>
         <!-- Switch modo oscuro en barra de titulo -->
         <div class="switch">
             <label>
