--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <header>
     <!--barra titulo-->
-    <nav class="barra light-blue darken-4" > <img id="imgtitulo" class="activator " width="100px " height="90%" src="img_catalogo/cofersa.png"></a>
+    <nav class="barra light-blue darken-4" > <img id="imgtitulo" class="activator " width="100px " height="90%" src="img_catalogo/cofersa.png"><a class="brand-logo center ">CATÁLOGO</a>
         <!-- Switch modo oscuro en barra de titulo -->
         <div class="switch">
             <label>
